# stt-pipeline

./: AGENTS.md  README.md  pyproject.toml
src/stt_pipeline/: app.py  config.py  diarize.py  merge.py  transcribe.py
